solaris-v0.2/build/log/idf_py_stdout_output_23595
Command: ninja all
[1/11] Linking C static library esp-idf/icm_driver/libicm_driver.a
[2/11] Performing build step for 'bootloader'
[1/1] cd /workspaces/solaris-software/solaris-v1/build/bootloader/esp-idf/esptool_py && /opt/esp/python_env/idf6.0_py3.12_env/bin/python /opt/esp/idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /workspaces/solaris-software/solaris-v1/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[3/11] No install step for 'bootloader'
[4/11] Completed 'bootloader'
[5/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache /opt/esp/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-dev\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/workspaces/solaris-software/solaris-v1/build/config -I/workspaces/solaris-software/solaris-v1/main -I/opt/esp/idf/components/newlib/platform_include -I/opt/esp/idf/components/freertos/config/include -I/opt/esp/idf/components/freertos/config/include/freertos -I/opt/esp/idf/components/freertos/config/xtensa/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/opt/esp/idf/components/freertos/esp_additions/include -I/opt/esp/idf/components/esp_hw_support/include -I/opt/esp/idf/components/esp_hw_support/include/soc -I/opt/esp/idf/components/esp_hw_support/include/soc/esp32s3 -I/opt/esp/idf/components/esp_hw_support/dma/include -I/opt/esp/idf/components/esp_hw_support/ldo/include -I/opt/esp/idf/components/esp_hw_support/debug_probe/include -I/opt/esp/idf/components/esp_hw_support/mspi_timing_tuning/include -I/opt/esp/idf/components/esp_hw_support/power_supply/include -I/opt/esp/idf/components/esp_hw_support/port/esp32s3/. -I/opt/esp/idf/components/esp_hw_support/port/esp32s3/include -I/opt/esp/idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/opt/esp/idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/opt/esp/idf/components/heap/include -I/opt/esp/idf/components/heap/tlsf -I/opt/esp/idf/components/log/include -I/opt/esp/idf/components/soc/include -I/opt/esp/idf/components/soc/esp32s3 -I/opt/esp/idf/components/soc/esp32s3/include -I/opt/esp/idf/components/soc/esp32s3/register -I/opt/esp/idf/components/hal/platform_port/include -I/opt/esp/idf/components/hal/esp32s3/include -I/opt/esp/idf/components/hal/include -I/opt/esp/idf/components/esp_rom/include -I/opt/esp/idf/components/esp_rom/esp32s3/include -I/opt/esp/idf/components/esp_rom/esp32s3/include/esp32s3 -I/opt/esp/idf/components/esp_rom/esp32s3 -I/opt/esp/idf/components/esp_common/include -I/opt/esp/idf/components/esp_system/include -I/opt/esp/idf/components/esp_system/port/soc -I/opt/esp/idf/components/esp_system/port/include/private -I/opt/esp/idf/components/xtensa/esp32s3/include -I/opt/esp/idf/components/xtensa/include -I/opt/esp/idf/components/xtensa/deprecated_include -I/opt/esp/idf/components/lwip/include -I/opt/esp/idf/components/lwip/include/apps -I/opt/esp/idf/components/lwip/include/apps/sntp -I/opt/esp/idf/components/lwip/lwip/src/include -I/opt/esp/idf/components/lwip/port/include -I/opt/esp/idf/components/lwip/port/freertos/include -I/opt/esp/idf/components/lwip/port/esp32xx/include -I/opt/esp/idf/components/lwip/port/esp32xx/include/arch -I/opt/esp/idf/components/lwip/port/esp32xx/include/sys -I/workspaces/solaris-software/solaris-v1/components/icm_driver/include -I/workspaces/solaris-software/solaris-v1/components/general/include -I/opt/esp/idf/components/driver/deprecated -I/opt/esp/idf/components/driver/i2c/include -I/opt/esp/idf/components/driver/touch_sensor/include -I/opt/esp/idf/components/driver/twai/include -I/opt/esp/idf/components/driver/touch_sensor/esp32s3/include -I/opt/esp/idf/components/esp_pm/include -I/opt/esp/idf/components/esp_ringbuf/include -I/opt/esp/idf/components/esp_driver_gpio/include -I/opt/esp/idf/components/esp_driver_pcnt/include -I/opt/esp/idf/components/esp_driver_gptimer/include -I/opt/esp/idf/components/esp_driver_spi/include -I/opt/esp/idf/components/esp_driver_mcpwm/include -I/opt/esp/idf/components/esp_driver_ana_cmpr/include -I/opt/esp/idf/components/esp_driver_i2s/include -I/opt/esp/idf/components/esp_driver_sdmmc/include -I/opt/esp/idf/components/sdmmc/include -I/opt/esp/idf/components/esp_driver_sdspi/include -I/opt/esp/idf/components/esp_driver_sdio/include -I/opt/esp/idf/components/esp_driver_dac/include -I/opt/esp/idf/components/esp_driver_rmt/include -I/opt/esp/idf/components/esp_driver_tsens/include -I/opt/esp/idf/components/esp_driver_sdm/include -I/opt/esp/idf/components/esp_driver_i2c/include -I/opt/esp/idf/components/esp_driver_uart/include -I/opt/esp/idf/components/vfs/include -I/opt/esp/idf/components/esp_driver_ledc/include -I/opt/esp/idf/components/esp_driver_parlio/include -I/opt/esp/idf/components/esp_driver_usb_serial_jtag/include -I/opt/esp/idf/components/esp_driver_twai/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O0 -fmacro-prefix-map=/workspaces/solaris-software/solaris-v1=. -fmacro-prefix-map=/opt/esp/idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /workspaces/solaris-software/solaris-v1/main/main.c
/workspaces/solaris-software/solaris-v1/main/main.c: In function 'app_main':
/workspaces/solaris-software/solaris-v1/main/main.c:14:5: error: unknown type name 'espr_err_t'; did you mean 'esp_err_t'?
   14 |     espr_err_t ret;
      |     ^~~~~~~~~~
      |     esp_err_t
/workspaces/solaris-software/solaris-v1/main/main.c:21:25: error: incompatible type for argument 1 of 'icm20948_init'
   21 |     ret = icm20948_init(icm);
      |                         ^~~
      |                         |
      |                         data_t
In file included from /workspaces/solaris-software/solaris-v1/main/main.c:5:
/workspaces/solaris-software/solaris-v1/components/icm_driver/include/icm20948.h:84:33: note: expected 'data_t *' but argument is of type 'data_t'
   84 | esp_err_t icm20948_init(data_t *p_dev);
      |                         ~~~~~~~~^~~~~
/workspaces/solaris-software/solaris-v1/main/main.c:29:27: error: incompatible type for argument 1 of 'icm20948_config'
   29 |     ret = icm20948_config(icm);
      |                           ^~~
      |                           |
      |                           data_t
/workspaces/solaris-software/solaris-v1/components/icm_driver/include/icm20948.h:85:35: note: expected 'data_t *' but argument is of type 'data_t'
   85 | esp_err_t icm20948_config(data_t *p_dev);
      |                           ~~~~~~~~^~~~~
/workspaces/solaris-software/solaris-v1/main/main.c:37:33: error: incompatible type for argument 1 of 'icm20948_prepare_read'
   37 |     ret = icm20948_prepare_read(icm);
      |                                 ^~~
      |                                 |
      |                                 data_t
/workspaces/solaris-software/solaris-v1/components/icm_driver/include/icm20948.h:86:41: note: expected 'data_t *' but argument is of type 'data_t'
   86 | esp_err_t icm20948_prepare_read(data_t *p_dev);
      |                                 ~~~~~~~~^~~~~
/workspaces/solaris-software/solaris-v1/main/main.c:46:42: error: incompatible type for argument 1 of 'icm20948_read_measurements'
   46 |         ret = icm20948_read_measurements(icm);
      |                                          ^~~
      |                                          |
      |                                          data_t
/workspaces/solaris-software/solaris-v1/components/icm_driver/include/icm20948.h:87:46: note: expected 'data_t *' but argument is of type 'data_t'
   87 | esp_err_t icm20948_read_measurements(data_t *p_dev);
      |                                      ~~~~~~~~^~~~~
ninja: build stopped: subcommand failed.
